--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@aws-sdk/client-s3": "^3.451.0",
     "@clerk/nextjs": "^4.27.1",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.0.0",
